--- a/public/list.html
+++ b/public/list.html
@@ -366,6 +366,11 @@
                 </div>
                 <div class="row">
                   <div class="col-lg-12">
+                    <label class="label-login" style="font-family: Montserrat;"
+                      >Foto de perfil</label
+                    >
+                  </div>
+                  <div class="col-lg-12">
                     <div class="form-group">
                       <input
                         type="file"
