--- a/public/profile.html
+++ b/public/profile.html
@@ -166,7 +166,9 @@
                       <div class="col-lg-12">
                         <h5>
                           Operadores registrados
-                          <span class="badge badge-secondary">410</span>
+                          <span id="workersQty" class="badge badge-secondary"
+                            >0</span
+                          >
                         </h5>
                       </div>
                     </div>
