--- a/public/login.html
+++ b/public/login.html
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Ingresa Ahora</title>
   </head>
   <body>
