--- a/public/profile.html
+++ b/public/profile.html
@@ -166,9 +166,10 @@
                       <div class="col-lg-12">
                         <h5>
                           Operadores registrados
-                          <span id="workersQty" class="badge badge-secondary"
-                            >0</span
-                          >
+                          <span
+                            id="workersQty"
+                            class="badge badge-secondary"
+                          ></span>
                         </h5>
                       </div>
                     </div>
