--- a/public/register.html
+++ b/public/register.html
@@ -190,7 +190,7 @@
                     type="file"
                     class="form-control"
                     id="companyImage"
-                    onchange="setPicture(event)"
+                    onchange="setCompanyPicture(event)"
                     required="required"
                   />
                 </div>
