feat: create view for make a test

--- a/public/list.html
+++ b/public/list.html
@@ -28,7 +28,7 @@
     <title>Lista de operadores</title>
   </head>
   <body onload="getWorkers()">
-    <div class="row nav">
+    <div class="row nav-top">
       <div class="col-lg-12">
         <div class="row">
           <div class="col-lg-6 col-md-4">
