--- a/public/question.html
+++ b/public/question.html
@@ -25,7 +25,7 @@
     <title>Preguntas</title>
   </head>
   <body>
-    <div class="row nav">
+    <div class="row nav-top">
       <div class="col-lg-12">
         <div class="row">
           <div class="col-lg-12 col-md-4">
