--- a/public/profile.html
+++ b/public/profile.html
@@ -25,7 +25,7 @@
     <title>Lista de operadores</title>
   </head>
   <body>
-    <div class="row nav">
+    <div class="row nav-top">
       <div class="col-lg-12">
         <div class="row">
           <div class="col-lg-6 col-md-4">
