refactor: Limit variables scope

--- a/public/register.html
+++ b/public/register.html
@@ -123,7 +123,7 @@
             </div>
             <div class="row">
               <div class="col-lg-12">
-                <label for="email" class="label-login"
+                <label for="userEmail" class="label-login"
                   >Correo electrónico</label
                 >
               </div>
