--- a/public/list.html
+++ b/public/list.html
@@ -366,6 +366,17 @@
                     </div>
                   </div>
                 </div>
+                <div class="custom-control custom-checkbox">
+                  <input
+                    type="checkbox"
+                    id="workerStateEdit"
+                    name="workerStateEdit"
+                    class="custom-control-input"
+                  />
+                  <label class="custom-control-label" for="workerStateEdit"
+                    >Activo?</label
+                  >
+                </div>
                 <div class="row">
                   <div class="col-lg-12">
                     <label class="label-login" style="font-family: Montserrat;"
