--- a/public/createQuestion.html
+++ b/public/createQuestion.html
@@ -24,7 +24,7 @@
     ></script>
     <title>Lista de operadores</title>
   </head>
-  <body>
+  <body onload="loadQuestions()">
     <div class="row nav-top">
       <div class="col-lg-12">
         <div class="row">
@@ -50,7 +50,7 @@
           <h1 class="title-body-pages">Crear cuestionario</h1>
         </div>
         <div class="col-lg-6" style="margin-top: 20px;">
-          <button type="button" class="btn btn-secondary nav-button">
+          <button type="button" class="btn btn-secondary nav-button" onclick="addQuestionnaire()">
             <i class="fa fa-paper-plane" aria-hidden="true"></i>
             Enviar cuestionario
           </button>
@@ -61,7 +61,7 @@
           <div class="row no-gutters">
             <div class="card-body">
               <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a
                     class="nav-link active"
                     id="pills-question-1"
@@ -72,59 +72,11 @@
                     aria-selected="true"
                     >Pregunta 1</a
                   >
-                </li>
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    id="pills-question-2"
-                    data-toggle="pill"
-                    href="#pills-q2"
-                    role="tab"
-                    aria-controls="pills-profile"
-                    aria-selected="false"
-                    >Pregunta 2</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    id="pills-question-3"
-                    data-toggle="pill"
-                    href="#pills-q3"
-                    role="tab"
-                    aria-controls="pills-contact"
-                    aria-selected="false"
-                    >Pregunta 3</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    id="pills-question-4"
-                    data-toggle="pill"
-                    href="#pills-q4"
-                    role="tab"
-                    aria-controls="pills-contact"
-                    aria-selected="false"
-                    >Pregunta 4</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    id="pills-question-5"
-                    data-toggle="pill"
-                    href="#pills-q5"
-                    role="tab"
-                    aria-controls="pills-contact"
-                    aria-selected="false"
-                    >Pregunta 5</a
-                  >
-                </li>
+                </li> -->
               </ul>
               <div class="tab-content" id="pills-tabContent">
                 <!--en el tab desde el href se especifica el id del pane-->
-                <div
+                <!-- <div
                   class="tab-pane fade show active"
                   id="pills-q1"
                   role="tabpanel"
@@ -140,7 +92,7 @@
                         >
                         <textarea
                           class="form-control"
-                          id=""
+                          id="enunciado-1"
                           rows="3"
                         ></textarea>
                       </div>
@@ -157,6 +109,7 @@
                         <div class="col-lg-12" style="margin-bottom: 10px;">
                           <input
                             type="text"
+                            id="op-a-1"
                             class="form-control"
                             placeholder="Opción A"
                           />
@@ -166,6 +119,7 @@
                         <div class="col-lg-12" style="margin-bottom: 10px;">
                           <input
                             type="text"
+                            id="op-b-1"
                             class="form-control"
                             placeholder="Opción B"
                           />
@@ -175,6 +129,7 @@
                         <div class="col-lg-12" style="margin-bottom: 10px;">
                           <input
                             type="text"
+                            id="op-c-1"
                             class="form-control"
                             placeholder="Opción C"
                           />
@@ -195,7 +150,7 @@
                           </div>
                           <div class="row">
                             <div class="col-lg-12">
-                              <select id="" class="form-control">
+                              <select id="resp-1" class="form-control">
                                 <option value="0">Opción A</option>
                                 <option value="1">Opción B</option>
                                 <option value="2">Opción C</option>
@@ -219,14 +174,18 @@
                           </div>
                           <div class="row">
                             <div class="col-lg-5">
-                              <input type="number" class="form-control" />
+                              <input
+                                type="number"
+                                id="grade-1"
+                                class="form-control"
+                              />
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
