fix: Edit worker image

--- a/public/list.html
+++ b/public/list.html
@@ -388,10 +388,10 @@
                       <input
                         type="file"
                         class="form-control"
-                        id="imageWorkerModal"
-                        onchange="setWorkerPicture(event)"
+                        id="imageWorkerEdit"
                       />
                     </div>
+                    <!--onchange="setWorkerPicture(event)"-->
                   </div>
                 </div>
                 <input id="workerId" name="workerId" type="hidden" />
