--- a/public/question.html
+++ b/public/question.html
@@ -42,13 +42,13 @@
         <div class="col-lg-6">
           <h1 class="title-body-pages">Test de John Doe</h1>
         </div>
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-6">
           <a href="./list.html">
             <button type="button" class="btn btn-secondary nav-button">
               <i class="fas fa-arrow-alt-circle-left"></i> Volver
             </button>
           </a>
-        </div>
+        </div> -->
       </div>
       <div class="row">
         <div class="col-lg-8" style="padding-top: 30px;">
