--- a/public/profile.html
+++ b/public/profile.html
@@ -49,7 +49,10 @@
         <h1 class="title-body-pages">Mi perfil</h1>
       </div>
       <div class="row" style="margin-top: 30px; margin-left: 30px;">
-        <div class="shadow card mb-3" style="width: 1060px; max-height: 600px;">
+        <div
+          class="shadow card card-profile mb-3"
+          style="width: 1060px; max-height: 600px;"
+        >
           <div class="row no-gutters">
             <div class="col-md-5">
               <img
