--- a/public/question.html
+++ b/public/question.html
@@ -22,9 +22,10 @@
       src="https://kit.fontawesome.com/4aacf972ad.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Preguntas</title>
   </head>
-  <body>
+  <body onload="initQuestionnaire()">
     <div class="row nav-top">
       <div class="col-lg-12">
         <div class="row">
@@ -40,7 +41,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="title-body-pages">Test de John Doe</h1>
+          <h1 id="questionnaire-title" class="title-body-pages"></h1>
         </div>
         <!-- <div class="col-lg-6">
           <a href="./list.html">
@@ -50,39 +51,8 @@
           </a>
         </div> -->
       </div>
-      <div class="row">
-        <div class="col-lg-8" style="padding-top: 30px;">
-          <div class="shadow card mb-3">
-            <div class="card-body">
-              <h3 class="card-title">Pregunta 1</h3>
-              <p class="card-text">
-                ¿Cómo calificaría nuestra rapidez para resolver su
-                garantía/servicio?
-              </p>
-              <!--Type question component-->
-              <div class="custom-control custom-radio">
-                <input
-                  type="radio"
-                  id="customRadio1"
-                  name="customRadio"
-                  class="custom-control-input"
-                />
-                <label class="custom-control-label" for="customRadio1"
-                  >Respuesta A</label
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="col-lg-12 score">
-            <div class="row">
-              <div class="col-lg-12 score-title">
-                <h2>Puntaje del test</h2>
-                <p class="score-body">5<span class="pts">Pts</span></p>
-              </div>
-            </div>
-          </div>
+      <div id="questionnaire" class="row">
+        <div id="questionnaire-body" class="col-lg-8" style="padding-top: 30px;">
         </div>
       </div>
     </div>
