feat: validation worker fields into creation and edition

--- a/public/list.html
+++ b/public/list.html
@@ -55,10 +55,12 @@
         <div class="col-lg-6" style="margin-top: 20px;">
           <div class="row">
             <div class="col-lg-6">
-              <button type="button" class="btn btn-secondary nav-button">
-                <i class="fa fa-plus" aria-hidden="true"></i>
-                Crear cuestionario
-              </button>
+              <a href="createQuestion.html">
+                <button type="button" class="btn btn-secondary nav-button">
+                  <i class="fa fa-plus" aria-hidden="true"></i>
+                  Crear cuestionario
+                </button>
+              </a>
             </div>
             <div class="col-lg-6">
               <button
@@ -321,7 +323,6 @@
                         type="text"
                         id="workerEmailEdit"
                         class="form-control"
-                        disabled
                       />
                     </div>
                   </div>
