--- a/public/question.html
+++ b/public/question.html
@@ -17,6 +17,11 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.datatables.net/v/bs4/jq-3.3.1/dt-1.10.20/datatables.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
     <script
       src="https://kit.fontawesome.com/4aacf972ad.js"
@@ -24,6 +29,10 @@
     ></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Preguntas</title>
+    <script
+      type="text/javascript"
+      src="https://www.gstatic.com/charts/loader.js"
+    ></script>
   </head>
   <body onload="initQuestionnaire()">
     <div class="row nav-top">
@@ -32,7 +41,11 @@
           <div class="col-lg-12 col-md-4">
             <a class="nav-title">GasoductosApp.</a>
           </div>
-          <button type="button" class="btn btn-light nav-button" onclick="logOut()">
+          <button
+            type="button"
+            class="btn btn-light nav-button"
+            onclick="logOut()"
+          >
             <i class="fas fa-sign-out-alt"></i> Salir
           </button>
         </div>
@@ -52,7 +65,38 @@
         </div> -->
       </div>
       <div id="questionnaire" class="row">
-        <div id="questionnaire-body" class="col-lg-8" style="padding-top: 30px;">
+        <div
+          id="questionnaire-body"
+          class="col-lg-8"
+          style="padding-top: 30px;"
+        ></div>
+      </div>
+    </div>
+    <div
+      class="modal fade bd-example-modal-xl"
+      id="chart-modal"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 style="font-family: Montserrat;">
+              Gráfica de resultados
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div id="piechart" style="width: 900px; height: 500px;"></div>
+          </div>
         </div>
       </div>
     </div>
