--- a/public/workerResults.html
+++ b/public/workerResults.html
@@ -26,7 +26,10 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <title>Resultados del operador</title>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script
+      type="text/javascript"
+      src="https://www.gstatic.com/charts/loader.js"
+    ></script>
   </head>
   <body onload="getWorkerResults()">
     <div class="row nav-top">
