feat: update questionnaire

--- a/public/createQuestion.html
+++ b/public/createQuestion.html
@@ -45,16 +45,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <h1 class="title-body-pages">Crear cuestionario</h1>
-        </div>
-        <div class="col-lg-6" style="margin-top: 20px;">
-          <button type="button" class="btn btn-secondary nav-button" onclick="addQuestionnaire()">
-            <i class="fa fa-paper-plane" aria-hidden="true"></i>
-            Enviar cuestionario
-          </button>
-        </div>
+      <div id="q-header" class="row">
       </div>
       <div class="row" style="margin-top: 30px; margin-left: 30px;">
         <div class="shadow card mb-3" style="width: 1060px; max-height: 600px;">
