--- a/public/list.html
+++ b/public/list.html
@@ -27,7 +27,7 @@
 
     <title>Lista de operadores</title>
   </head>
-  <body onload="getWorkers()">
+  <body onload="prepareWorkersList()">
     <div class="row nav-top">
       <div class="col-lg-12">
         <div class="row">
@@ -56,9 +56,7 @@
           <div class="row">
             <div class="col-lg-6">
               <a href="createQuestion.html">
-                <button type="button" class="btn btn-secondary nav-button">
-                  <i class="fa fa-plus" aria-hidden="true"></i>
-                  Crear cuestionario
+                <button id="q-btn" type="button" class="btn btn-secondary nav-button">
                 </button>
               </a>
             </div>
